Support nulls with toList